deployments/kubernetes/gallifrey/backend/s3fetcher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3fetcher-deployment
  namespace: gallifrey
  labels:
    app: s3fetcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3fetcher
  template:
    metadata:
      labels:
        app: s3fetcher
    spec:
      containers:
      - name: s3fetcher
        image: nicokahlert/gallifrey-s3fetcher@sha256:35c7c4d61716e22300958447510154df4cb50a6ff55eac30a63ea5152a7a5411
        volumeMounts:
        - mountPath: /etc/s3fetcher
          name: s3fetcher-config-vol
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
      volumes:
      - name: s3fetcher-config-vol
        configMap:
          name: gallifrey-config
