deployments/kubernetes/gallifrey/backend/s3fetcher/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gallifrey
  name: s3fetcher-service
spec:
  selector:
    app: s3fetcher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
