deployments/kubernetes/gallifrey/backend/s3fetcher/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3fetcher-ingress
  namespace: gallifrey
spec:
  rules:
  - host: stock.gallifrey.local
    http:
      paths:
      - path: /
        backend:
          serviceName: s3fetcher-service
          servicePort: 80
